# cartool

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
docs/: Guiding_Star.md  secrets-management.md  technical-spec.md
project_management/: README.md  epic-01-infrastructure.md  epic-02-scraper-foundation.md  epic-03-data-enrichment.md  epic-04-financial-engine.md  epic-05-core-api.md  epic-06-auth-service.md  epic-07-notifications.md  epic-08-frontend-web.md  epic-09-mobile-app.md
services/api/: .env.example  Dockerfile  package-lock.json  package.json
services/auth/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
services/db/: .env.example  Dockerfile  node-pg-migrate.config.cjs  package-lock.json  package.json  tsconfig.json
services/financial-engine/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/financial-engine/app/: db.py  deal_score.py  emp.py  finance_integrity.py  main.py  market_price.py  mf.py  mpmr.py  obbba.py  reverse_search.py  tax.py
services/financial-engine/cartool_financial_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/financial-engine/tests/: conftest.py  test_deal_score.py  test_dod_deal_score.py  test_emp.py  test_finance_integrity.py  test_health.py  test_market_price.py  test_mf.py  test_mpmr.py  test_obbba.py  test_reverse_search.py  test_tax.py
services/notification/: .env.example  Dockerfile  package-lock.json  package.json
services/scraper/: .env.example  Dockerfile  jest.config.cjs  package-lock.json  package.json  tsconfig.json
(+113 files in other folders)
